--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -803,8 +803,7 @@ main .explore .closeFilter {
     z-index: 9999;
     background: #f8f8f8;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    gap: 12px;
     flex-direction: column;
     height: 100vh;
     width: 100vw;
@@ -1064,8 +1063,14 @@ main .companies .company_card.company img {
 main .about_us {
   padding: 80px 0 0px;
 }
+@media screen and (max-width: 576px) {
+  main .about_us .row {
+    gap: 40px;
+  }
+}
 main .about_us .pl-200 {
   padding-left: 200px !important;
+  padding: 0 30px !important;
 }
 main .about_us .text-lg {
   font-size: 18px;
@@ -1098,6 +1103,11 @@ main .about_us .banner-imgs-about .banner-sm-4 {
   top: 15%;
   left: -110px;
 }
+@media screen and (max-width: 576px) {
+  main .about_us .banner-imgs-about .banner-sm-4 {
+    left: -30px;
+  }
+}
 main .about_us .banner-imgs-about .banner-sm-4 img {
   border-radius: 0;
   animation: hero-thumb-sm-animation 4s linear infinite alternate;
@@ -1109,6 +1119,14 @@ main .about_us .banner-imgs-about .banner-sm-5 {
 }
 main .about_us .banner-imgs-about .banner-sm-5 img {
   border-radius: 0;
+}
+@media screen and (max-width: 576px) {
+  main .about_us .banner-imgs-about .banner-sm-5 {
+    left: -45px;
+  }
+  main .about_us .banner-imgs-about .banner-sm-5 img {
+    height: 120px;
+  }
 }
 @keyframes hero-thumb-sm-2-animation {
   0% {
@@ -1332,7 +1350,6 @@ main .downloadApp {
   background-image: url("../images/banner_resumes.jpg");
 }
 main .downloadApp .container {
-  z-index: 99;
   position: relative;
 }
 main .downloadApp .container h2 {
