--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -788,7 +788,8 @@ main {
         bottom: -100%;
         z-index: 9999;
         background: $inputBg;
-        @include space-between();
+        display: flex;
+        gap: 12px;
         flex-direction: column;
         height: 100vh;
         width: 100vw;
@@ -1039,8 +1040,14 @@ main {
   }
   .about_us {
     padding: 80px 0 0px;
+    .row {
+      @media screen and (max-width: 576px) {
+        gap: 40px;
+      }
+    }
     .pl-200 {
       padding-left: 200px !important;
+      padding: 0 30px !important;
     }
     .text-lg {
       font-size: 18px;
@@ -1072,6 +1079,9 @@ main {
       position: absolute;
       top: 15%;
       left: -110px;
+      @media screen and (max-width: 576px) {
+        left: -30px;
+      }
       img {
         border-radius: 0;
         animation: hero-thumb-sm-animation 4s linear infinite alternate;
@@ -1083,6 +1093,12 @@ main {
       left: -90px;
       img {
         border-radius: 0;
+      }
+      @media screen and (max-width: 576px) {
+        left: -45px;
+        img {
+          height: 120px;
+        }
       }
     }
     @keyframes hero-thumb-sm-2-animation {
@@ -1304,7 +1320,6 @@ main {
     background-size: cover;
     background-image: url('../images/banner_resumes.jpg');
     .container {
-      z-index: 99;
       position: relative;
       h2 {
         font-size: 24px;
