--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1353,6 +1353,7 @@ main {
       }
       .category_card {
         width: 100%;
+        display: block;
         overflow: hidden;
         border-radius: 12px;
         position: relative;
